Settings for production